$Id: History,v 1.24 2001-04-27 14:20:25 gcosmo Exp $
----------------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

             History file for geometry/solids/BREPS
	     --------------------------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

27/04/2001 : G. Cosmo            breps-V03-01-01
- G4BSplineCurve.cc: fixed compilation warnings on HP-UX, concerning
  potential uninitialised vector elements.

20/04/2001 : G. Cosmo            breps-V03-01-00
- Migration to STL vector:
  o G4Assembly: migrated G4PlacedVector typedef.
  o G4PlacementVector: migrated G4PlacementVector typedef.
  o G4Point3DVector: migrated G4Point3DVector typedef.
  o G4CurveVector: migrated G4CurveVector typedef.
  o G4BSplineCurve: migrated G4doubleVector typedef and removed
    redefinition of G4Point3DVector.

05/01/2001 : G. Cosmo            breps-V03-00-00
- Removed useless inclusion of G4OrderedTable.hh from G4Assembly.hh and
  G4STEPEntity.hh.

20/11/2000 : G. Cosmo            breps-V02-00-03
- Fixes to remove warnings from "-Wall -ansi -pedantic" g++ compiler options:
  o commented out variables declared and not used.
  o fixed declaration of variables used before being initialised.
  o fixed order of initialisation of member data in constructors.
  o fixed usage of unsigned-int (size_t) for array indeces.
